@@ -18,7 +18,7 @@
 import os
 import shutil
 
-from bzrlib import bzrdir, errors
+from bzrlib import bzrdir, errors, ui
 from bzrlib.osutils import isdir
 from bzrlib.trace import note
 from bzrlib.workingtree import WorkingTree
@@ -93,16 +93,25 @@ def _filter_out_nested_bzrdirs(deletables):
 
 def delete_items(deletables, dry_run=False):
     """Delete files in the deletables iterable"""
+    def onerror(function, path, excinfo):
+        """Show warning for errors seen by rmtree.
+        """
+        ui.ui_factory.show_warning('unable to remove %s' % path)
     has_deleted = False
     for path, subp in deletables:
         if not has_deleted:
             note("deleting paths:")
             has_deleted = True
-        note('  ' + subp)
         if not dry_run:
-            if isdir(path):
-                shutil.rmtree(path)
-            else:
-                os.unlink(path)
+            try:
+                if isdir(path):
+                    shutil.rmtree(path, onerror=onerror)
+                else:
+                    os.unlink(path)
+                note('  ' + subp)
+            except OSError, e:
+                ui.ui_factory.show_warning('unable to remove %s' % path)
+        else:
+            note('  ' + subp)
     if not has_deleted:
         note("No files deleted.")
